--- a/src/app/landing-page/sections/a-hero/a-hero.component.scss
+++ b/src/app/landing-page/sections/a-hero/a-hero.component.scss
@@ -45,9 +45,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding-top: 20dvh;
 
-      @media screen and (max-width: 1100px) {
-        padding-top: 15dvh;
+      @media (max-height: 900px ) {
+        padding-top: 5dvh;
       }
 
       .job {
